@@ -1,5 +1,8 @@
 Revision history for DBIx-Class-Helpers
 
+       - Super basic POD cleanup
+       - Tighter Restrictions on the namespaces of parent classes
+
 0.092970 Sat Oct 24 02:41:00 CDT 2009
        - Initial Release
 
